# hello_robot

./: .gitignore  CMakeLists.txt  README.md  hello_robot_design.drawio  package.xml
3D Printing/Electrical and Control/: PS-12V.blend  PS-12V.blend1  PS-12V.stl  PS-5V.blend  PS-5V.blend1  PS-5V.stl  Panel-layout-control-printable.blend  Panel-layout-control-printable.blend1  Panel-layout-control-printable.stl  Panel-layout-power-printable.blend  Panel-layout-power-printable.blend1  Panel-layout-power-printable.stl  Panel-layout-power.blend  Panel-layout-power.blend1  RaspPi.blend  RaspPi.blend1  RaspPi.stl  Teensy-bkout.blend  Teensy-bkout.blend1  Teensy-bkout.stl  cap.stl  duct-cap-thicker.blend  duct-cap-thicker.blend1  duct-cap.blend  duct-cap.blend1  duct-cap.stl  duct.stl  imu.blend  imu.blend1  imu.stl  motor_controller.blend  motor_controller.blend1  motor_controller.stl  (+7 more)
config/: diffdrive.yaml  sensors.yaml
description/: hello_robot.gazebo.xacro  hello_robot.urdf.xacro
hello_robot_build/: Readme.md
hello_robot_control/: CMakeLists.txt  package.xml
hello_robot_control/config/: hello_robot_control.yaml
hello_robot_control/launch/: hello_robot_control.launch
hello_robot_control/rviz/: hello_robot.rviz
hello_robot_description/: CMakeLists.txt  hello_robot_design_diagrams.drawio  package.xml
hello_robot_gazebo/: CMakeLists.txt  package.xml
hello_robot_mbf/: CMakeLists.txt  package.xml
hello_robot_mbf/config/: dwa_local_planner_params.yaml  move_base.yaml
hello_robot_mbf/launch/: amcl_demo.launch  rviz.launch
hello_robot_mbf/launch/includes/: move_base.launch.xml
hello_robot_mbf/rviz/: hello_robot_mbf.rviz
hello_robot_mbf/scripts/: mbf_move_base_action.py
hello_robot_navigation/: CMakeLists.txt  package.xml
hello_robot_navigation/config/: costmap_common_params.yaml  costmap_global_params.yaml  costmap_local_params.yaml  teb_local_planner_params.yaml
hello_robot_navigation/launch/: amcl.launch  hello_robot_navigation.launch  move_base.launch
hello_robot_navigation/maps/: map.pgm  my_first_map.pgm  my_first_map.yaml
hello_robot_navigation/param/: base_local_planner_params_teb.yaml
hello_robot_navigation/rviz/: hello_robot_navigation.rviz
hello_robot_slam/: CMakeLists.txt  package.xml
hello_robot_slam/launch/: hello_robot_gmapping.launch  hello_robot_slam.launch
hello_robot_slam/rviz/: hello_robot_gmapping.rviz
hello_world_navigation/: CMakeLists.txt  package.xml
launch/: display_gazebo.launch  display_rviz.launch  gazebo_diffdrive.launch
software/: README.md
teensy/: README.md
urdf/: hello_robot.urdf  hello_robot.urdf.xacro  hello_robot.xacro
(+38 files in other folders)
