<?xml version="1.0"?>
<package format="2">
  <name>hello_robot_navigation</name>
  <version>0.0.0</version>
  <description>The hello_robot_navigation package</description>
  <maintainer email="michael.muldoon.home@gmail.com">Michael Muldoon</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>amcl</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>move_base</build_depend>
  <build_export_depend>amcl</build_export_depend>
  <build_export_depend>map_server</build_export_depend>
  <build_export_depend>move_base</build_export_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>

</package>
